# L2VE

./: .dockerignore  .env.example  .gitignore  README.md  backup_all.sh  docker-compose.yml  jenkins_job_backup.sh  jenkins_job_restore.sh  restore_sql_into_postgres.sh
backend/: .dockerignore  Dockerfile  requirements.txt  update_project_stats.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: __init__.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  analysis_result.py  project.py  project_member.py  report.py  scan.py  seed_db.py  team.py  user.py  (+2 more)
backend/scripts/: debug_jenkins_setup.py  refresh_jenkins_jobs.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
init-scripts/postgres/: 01-init-schema.sql
jenkins/: Dockerfile  Jenkinsfile  jenkins.yaml  jobs.groovy  plugins.txt
jenkins/init.groovy.d/: 01-create-jobs.groovy  02-auto-set-url.groovy  03-generate-api-key.groovy
langgraph-scan/: diet.py  diet2.py  main.py  requirements.txt
langgraph-scan/mcp_server/: .env.example  README.md  config.py  indexer.py  requirements.txt  server.py
langgraph-scan/mcp_server/mcp_code_index_server/: pyproject.toml
langgraph-scan/mcp_server/mcp_code_index_server/scripts/: dev_index.sh
langgraph-scanner/: .gitignore  extract_candidate_from_sarif.py  main.py  requirements.txt
langgraph-scanner/semgrep-rules/: java.yml  javascript.yml  kotlin.yml  python.yml
langgraph-scanner/src/: __init__.py
scripts/: README.md
(+115 files in other folders)
