[project]
name = "code-index-mcp"
version = "0.1.1"
description = "Flowise-ready MCP server for precise code browsing with language maps and excludes"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.1.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
treesitter = ["tree_sitter_languages>=1.10.2"]

[tool.mypy]
python_version = "3.11"
